modal window design

--- a/social_network/settings_app/templates/albums/albums.html
+++ b/social_network/settings_app/templates/albums/albums.html
@@ -182,7 +182,7 @@
                 
                 <div class="buttons-album">
                     <button class="cancel-button" id = "cancelButton">Скасувати</button>
-                    <button class="save-button" type="submit">Зберегти</button>
+                    <button class="save-button" type="submit">Підтвердити</button>
                 </div>
                 
                 
