--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -409,15 +409,132 @@ button.edit-info-button.password{
 }
 
 .modal-password{
-    background-color: magenta;
+    background-color: white;
     width: calc(18.7vw + 26.4vh);
     height: calc(13.1vw + 18.5vh);
     display: flex;
-    justify-content: center;
-    position: absolute;
+    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
+    border-radius: calc(0.7vw + 0.9vh);
+    padding: calc(0.8vw + 1.1vh) calc(1.5vw + 2.1vh) calc(1.5vw + 2.1vh) calc(1.5vw + 2.1vh);
+    gap: calc(0.8vw + 1.1vh);
 }
 
 .hidden-modal{
     visibility: hidden;
+}
+
+.dark-for-modal{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    z-index: 99; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.close-window-div{
+    width: calc(15.7vw + 22.1vh);
+    height: calc(0.7vw + 0.9vh);
+    display: flex;
+    justify-content: flex-end;
+}
+
+.mini-input{
+    width: calc(1.7vw + 2.4vh);
+    height: calc(1.4vh + 2.1vw);
+    border-radius: calc(0.3vw + 0.4vh);
+    text-align: center;
+    border: calc(0.03vw + 0.05vh) #CDCED2 solid;
+}
+
+.div-inputs{
+    width: calc(12.5vw + 19vh);
+    height: calc(1.6vw + 2.2vh);
+    margin-top: calc(0.3vw + 0.5vh);
+    display: flex;
+    justify-content: space-between;
+}
+
+
+button.save-button:hover{
+    background-color: #493447;
+}
+
+.mini-input-group{
+    width: calc(1vw + 2.6vh);
+    gap: calc(0.5vw + 0.7vh);
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.text-remade-one{
+    color: #070A1C;
+    font-size: calc(0.8vw + 1.1vh);
+    font-weight: 500;
+}
+
+.text-remade-two{
+    color: #070A1C;
+    font-size: calc(0.5vw + 0.7vh);
+    font-weight: 500;
+}
+
+.text-password-remake{
+    height: calc(3.3vw + 4.7vh);
+    gap: calc(0.5vw + 0.7vh);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.two-text{
+    width: calc(13.8vw + 19.6vh);
+    height: calc(1.8vw + 2.6vh);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.main-password-content{
+    width: calc(15.6vw + 22.1vh);
+    height: calc(2.3vw + 3.3vh);
+    
+
+}
+
+
+.cancel-button{
+    width: calc(7.5vw + 10.6vh);
+    height: calc(1.3vw + 1.9vh);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.7vh) calc(0.3vw + 0.5vh) calc(0.5vw + 0.7vh);
+    border-radius: 1234px;
+    gap: calc(0.2vw + 0.4vh);
+    border: calc(0.03vw + 0.05vh) #543C52 solid;
+    background-color: white;
+    color: #543C52;
+    font-size: calc(0.5vw + 0.6vh);
+    font-weight: 500;
+    margin-right: calc(0.2vw + 0.4vh);
+}
+
+.save-button{
+    width: calc(7.5vw + 10.6vh);
+    height: calc(1.8vw + 2.5vh);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.7vh) calc(0.3vw + 0.5vh) calc(0.5vw + 0.7vh);
+    border-radius: 1234px;
+    gap: calc(0.2vw + 0.4vh);
+    border: calc(0.03vw + 0.05vh) white solid;
+    background-color: #543C52;
+    color: white;
+    font-size: calc(0.5vw + 0.6vh);
+    font-weight: 500;
 }
