--- a/social_network/chats/templates/all_chats/all_chats.html
+++ b/social_network/chats/templates/all_chats/all_chats.html
@@ -98,7 +98,7 @@
                                                     <h3 class = "friend-name">{{group.name}}</h3>
                                                     <h3 class = "time">09:41</h3>
                                                 </div>
-                                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                                                <h4 class = message-friend>Повідомлення</h4>
                                             </a>
                                         </div>
                                     </div>
