--- a/social_network/chats/static/css/modals/modals.css
+++ b/social_network/chats/static/css/modals/modals.css
@@ -36,3 +36,42 @@
 .add-member-button:hover{
     cursor: pointer;
 }
+.modal-info{
+    display: flex;
+    flex-direction: column;
+    padding: calc(0.5vw + 0.8vh);
+    width: calc(11.9vw + 16.8vh);
+    position: absolute;
+    background-color: rgba(233, 229, 238, 1);
+    border-radius: calc(0.3vw + 0.5vh);
+
+    margin-left: calc(9.5vw + 5vh);
+    gap: calc(0.5vw + 0.8vh);
+}
+.admin-modal-info{
+    margin-top: calc(2.8vw + 5vh);
+}
+.user-modal-info{
+    margin-top: calc(1.5vw + 1.3vh);
+}
+.dots-container{
+    width: calc(10.8vw + 15.2vh);
+    display: flex;
+    justify-content: flex-end;
+}
+.frame-title{
+    display: flex;
+    align-items: center;
+    gap: calc(0.3vw + 0.5vh);
+}
+.title-redact-h1{
+    font-size: calc(0.5vw + 0.8vh);
+}
+.line{
+    width: calc(10.8vw + 15.2vh);
+    height: calc(0.03vw + 0.05vh);
+    background-color: rgba(205, 206, 210, 1);
+}
+.dots:hover{
+    cursor: pointer;
+}
