--- a/social_network/publications/templates/my_publications/index.html
+++ b/social_network/publications/templates/my_publications/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Головна
+    Мої публікації
 {% endblock %}
 
 {% block link %}
@@ -15,13 +15,15 @@
         <div class = "profile-frame">
             <div class = "frame profile">
                 <div class = "avatar">
-                    {% for avatar in my_avatars %}
-                        {% if avatar.image %}      
-                            <img class = "my-avatar" src="{{ avatar.image.url }}" alt="">
-                        {% else %}
-                            <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                        {% endif %}
-                    {% endfor%}
+                    {% if my_avatars %}
+                        {% for avatar in my_avatars %}
+                            {% if avatar.image %}      
+                                <img class = "my-avatar" src="{{ avatar.image.url }}" alt="">
+                            {% endif %}
+                        {% endfor%}
+                    {% else %}
+                        <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                    {% endif %}
                 </div>
                 <div class = "nick-and-tag">
                     <h2 class = "name">{{request.user.first_name}} {{request.user.last_name}}</h2>
@@ -33,7 +35,11 @@
                         <h3 class = "info">Дописи</h3>  
                     </div>
                     <div class = "followers section">
-                        <h2 class = "number">12.1K</h2>
+                        {% if all_views %}
+                            <h2 class = "number">{{ all_views.count}}</h2>
+                        {% else %}
+                            <h2 class = "number">0</h2>
+                        {% endif %}
                         <h3 class = "info">Читачі</h3>
                     </div>
                     <div class = "all-friends section">
@@ -147,24 +153,19 @@
                                         <div class = "avatar-label">
                                             <div class = "people-logo-and-nick">
                                                 <div class = "logo-post">
-                                                    {% for avatar in all_avatars %}
-                                                        {% if avatar.image %}
-                                                            {% if avatar.profile == post.author%}
-                                                                <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                                            {% endif  %}
-                                                        {% else %}
-                                                            <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                                        {% endif%}
-                                                    {% endfor %}
+                                                {% if my_avatars %}
+                                                    {% for avatar in my_avatars %}
+                                                        {% if avatar.image %}      
+                                                            <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">
+                                                        {% endif %}
+                                                    {% endfor%}
+                                                {% else %}
+                                                    <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                                {% endif %}
                                                 </div>
                                                 <div class = "nick-post">
-                                                    <h2 class = "nick-friend">{{post.author}}</h2>
+                                                    <h2 class = "nick-friend">{{post.author.user.first_name}} {{post.author.user.last_name}}</h2>
                                                 </div>
-                                            </div>
-                                            <div class = "signature">
-                                                {% if user.signature %}
-                                                    <img  class = "signature" src="{{ user.signature.url }}" alt="">
-                                                {% endif%}
                                             </div>
 
                                         </div>
@@ -198,12 +199,12 @@
                                         </div>
                                         <div class = "reviews">
                                             <div class = "review">
-                                                <div class = "icon-review">
-                                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
-                                                </div>
-                                                <h2 class = "likes">{{post.like_count}} Вподобайок</h2>
+                                                <a class = "icon-review icon-like {{post.pk}}" id ="{% url 'get_likes' post.pk %}" >
+                                                    <img class = "likes-icon likes-icon-click" src="{% static 'images/icons/Like.png'%}" alt="">
+                                                </a>
+                                                <h2 class = "likes likes-title"><span id = "likesPost-{{post.pk}}">{{ post.likes.count }}</span> Вподобайок</h2>
                                             </div>
-                                            <div class = "review">
+                                            <div class = "review review-margin">
                                                 <div class = "icon-review">
                                                     <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
                                                 </div>
@@ -327,4 +328,5 @@
 {% block script %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src = "{% static 'js/script.js' %}"></script>
+    <script src = "{% static 'js/ajax.js' %}"></script>
 {% endblock %}
