--- a/social_network/chats/static/css/all_chats/style.css
+++ b/social_network/chats/static/css/all_chats/style.css
@@ -303,6 +303,14 @@ body{
     align-items: center;
     gap: calc(0.8vw + 1.2vh);
 }
+.cancel-create-group:hover{
+    background-color: rgba(233, 229, 238, 1);
+    cursor: pointer;        
+}
+.confirm-create-group:hover{
+    background-color: rgb(63, 45, 62);;
+    cursor: pointer;        
+}
 .button_down{
     color: #543C52;
     font-family: "GT Walsheim Pro";
@@ -311,9 +319,15 @@ body{
     border-radius: 1234px;
     width: calc(3vw + 4vh);
     height: calc(1.3vw + 1.9vh);
-    
-   
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
+.button_down:hover{
+    background-color: rgba(233, 229, 238, 1);
+    cursor: pointer;
+}
+
 .button_right{
     color: #FFFFFF;
     font-family: "GT Walsheim Pro";
