--- a/social_network/chats/templates/all_chats/all_chats.html
+++ b/social_network/chats/templates/all_chats/all_chats.html
@@ -154,7 +154,7 @@
         <div class = "fullscreen hidden"></div>
         <div class = "modal-create-group modal-create-group-create hidden">
             <div class = "frame-cross">
-                <img class = "cross-image" src="{% static 'images/cross.png' %}" alt="">
+                <img class = "cross-image close-create-group-name" src="{% static 'images/cross.png' %}" alt="">
             </div>
             <h1 class = "title-new-group">Нова група</h1>
             <div class = "input-modal-create">
@@ -261,7 +261,7 @@
                 </div>
                 
                 <div class = "button_style">
-                    <button type = "submit" class = "button_down">Назад</button>
+                    <a type = "submit" class = "button_down close-second-modal">Назад</a>
                     <button type = "submit" class = "button_right">Створити групу</button>
                 </div>
             </form>
