--- a/social_network/publications/static/css/my_publications/style.css
+++ b/social_network/publications/static/css/my_publications/style.css
@@ -5,3 +5,10 @@
 .main{
     background-color: white;
 }
+.add-tag{
+    width: calc(6.6vw + 9.3vh);
+    height: calc(1vw + 1.4vh);
+}
+.tag-container{
+    align-items: center;
+}
