--- a/social_network/publications/templates/my_publications/index.html
+++ b/social_network/publications/templates/my_publications/index.html
@@ -231,21 +231,22 @@
                 <h1 class="title-form">Створення публікації</h1>
                 <form method="post" class = "input-form"enctype="multipart/form-data">
                     {% csrf_token %}
-
                     {% for field in form %}  
                         
                         {% if field.name == "tags" %}
                             <div class = "all_tags">    
                                 <div class = "tag-container">
                                     {% for tag in tags %}
-                                        <label class="tag-object" data-id="{{ tag.id }}">
+                                        <label type = "button" class="tag-object" data-id="{{ tag.id }}">
                                             {{ tag.name }}
                                             <input type="checkbox" name="tags" value="{{ tag.id }}">
                                         </label>
                                     {% endfor %}
-                                    <button class = "button-hashtag">
+                                    <button class = "button-hashtag" type = "button">
                                         <img  class = "image-hashtag" src="{% static 'images/icons/add_hashtag.png' %}" alt="">
                                     </button>
+                                    <input type="text" class = "add-tag hidden" value="#">
+                                    <img class = "image-hashtag image-confirm-tag hidden" src="{% static 'images/icons/correct.png'%}" alt="">
                                 </div>
                             </div>
                         {% elif field.name != "images" and field.name != "url" %}
